--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </head>
 <body>
 
-  <h2>🔐 Secure QR with Shared Key</h2>
+  <h2>🔐 Secure QR with Shared Key with Cryptop.js library AESenc</h2>
 
   <input type="text" id="message" placeholder="Enter secret message">
   <input type="password" id="key" placeholder="Enter shared secret key">
